# taranaki

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  justfile  main.go  pyproject.toml  taranaki.py  wkg-config.toml
.github/workflows/: pipeline.yml  rust.yml  security.yml  wasm.yml
cmd/taranaki-proxy/: cli.go  config.go  main.go  proxy.go  util.go
components/hello/: world.wit
crates/taranaki/: Cargo.toml
crates/taranaki-cli/: Cargo.toml
crates/taranaki-module/: Cargo.toml
crates/taranaki-module/src/: lib.rs
crates/taranaki-python/: Cargo.toml
crates/taranaki-python/src/: argv.rs  command_info.rs  commander.rs  commands.rs  convert.rs  eval.rs  http.md  http.rs  lib.rs  lossless.rs  lossy.rs  mode.rs  serialize.rs  version.rs
crates/taranaki-python/src/commands/: callable.rs  cmdargv.rs  execute.rs  exists.rs  not_implemented.rs  nt.rs  request.rs  sysargv.rs
crates/taranaki-wasm/: Cargo.toml
crates/taranaki-wasm/src/: lib.rs
docker/: Dockerfile
docs/: README.md
examples/: collatz.py  sum_keys.py  the_adder.py
examples/forms/: form1.py
interfaces/taranaki/component/: world.wit
interfaces/taranaki/redis/: world.wit
providers/ngrok/: world.wit
src/: lib.rs
src/taranaki/: __init__.py  cli.py  client.py  compat.py  proxy.py  python.py  serve_ngrok.py  serverless.py  util.py  wasm.py
src/taranaki/compat/: http.py  platform.py
test/: resp2.py  test_commands.py  test_function.py  test_http.py  test_nt.py  test_python.py  test_resp.py
tools/: update-commands.py  update-version.py
wasm/: collatz.gr  collatz.wasm  collatz.wat
wit/: README.md  redis.wit
