[package]
name = "taranaki-module"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
redis-module = {git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.2", default-features = false, features = ["min-redis-compatibility-version-7-4"] }
redis-module-macros = {git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.2" }
wasmtime.workspace = true
