[package]
name = "taranaki"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
monty={git="https://github.com/pydantic/monty/", tag="v0.0.16"}
redis-module = {git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.2", default-features = false, features = ["min-redis-compatibility-version-7-4"] }
redis-module-macros = {git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.2" }
num-bigint = { workspace = true }
url = "2.5.8"
serde_urlencoded = "0.7.1"
serde_json = "1.0.149"
